--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native": "0.79.3",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-heroicons": "^4.0.0",
+    "react-native-progress": "^5.0.1",
     "react-native-reanimated": "~3.17.4",
     "react-native-reanimated-carousel": "^4.0.2",
     "react-native-safe-area-context": "5.4.0",
